2005-03-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add a check for cups

2005-03-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Build all dpkg scripts concurrently in memeory
	instead of looking over them one at a time.

2005-03-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Package.pm: refactoring require_packages and forget_packages
	* Bootstrap.pm, Engine.pm, Selfupdate.pm: Removing calls to
	Fink::Shlibs->require_packages, Fink::Shlibs->forget_packages

2005-03-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm: Adding missing calls to rebuilt the
	shlibs.db
	* Package.pm: Fixed require_packages from 2005-02-23 commit to
	combine duplicate code

2005-03-07  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Config.pm: Added new $dbpath var
	* Shlibs.pm, Package.pm, Selfupdate.pm: Moved db files to
	%p/var/lib/fink and changed to use new $dbpath var

2005-03-07  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: remove app link in /Applications/Fink if it
	still exists.

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Invert meaning of choose_mirrors return (true
	means unchanged)

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Add boolean return value to choose_mirrors, indicating if mirror selections are changed

2005-03-02  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm, Notify.pm: Fix $VERSION for emacs paren balancer.

2005-03-01  Daniel Macks  <dmacks@netspace.org>

	* Notify/QuickSilver.pm: thought it was the Say module. Corrected
	to QuickSilver.
	* Notify/Growl.pm: Simplify do_notify
	* Notify/*.pm: Fix $VERSION for emacs paren balancer.
	* Notify/QuickSilver.pm, Notify/Say.pm, Notify/Syslog.pm: use
	package global variable for Unix command. Improved error checking
	during writing to pipe.

2005-02-28  Daniel Macks  <dmacks@netspace.org>
